src/objects/Co_Op_Allocation__c.object
<CustomObject>
    <fields>
        <fullName>A_A_VITAL_Allocation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>A&amp;A (VITAL) Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>A_A_VITAL_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>A&amp;A (VITAL) Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>A_A_VITAL__c</fullName>
        <label>OLD A&amp;A (VITAL) %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Partner_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Partner_Name__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjustment_Amount__c</fullName>
        <formula>Transfers_in_Amount__c - Transfers_out_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocation_ID__c</fullName>
        <displayFormat>A-{000000000}</displayFormat>
        <label>Co-op Allocation ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Allocation_Month__c</fullName>
        <label>Allocation Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allocation_Period_Balance__c</fullName>
        <formula>PRM_Co_op_Allocation_Amount__c  +  Adjustment_Amount__c  -  Reimbursed_Amount__c  -  Amount_Pending_for_Reimbursement__c - Expiration_Amount__c - Pipeline_Claims__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allocation Period Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Allocation_Year__c</fullName>
        <label>Allocation Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_Pending_for_Reimbursement__c</fullName>
        <label>Pending Reimbursement Amount</label>
        <summarizedField>Accrual_junction__c.Amount_deducted_from_accrual__c</summarizedField>
        <summaryFilterItems>
            <field>Accrual_junction__c.Status__c</field>
            <operation>equals</operation>
            <value>Pending Reimbursement</value>
        </summaryFilterItems>
        <summaryForeignKey>Accrual_junction__c.Accrual__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Available_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Available Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Co_Op_Allocation_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>OLD Co-op Allocation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Co_Op_Allocation_Period__c</fullName>
        <formula>TEXT( Allocation_Month__c ) + &apos; &apos; +  TEXT( Allocation_Year__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Co-op Allocation Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Op_Eligible_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>OLD Co-op Eligible Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>TEXT(Partner_Name__r.Country__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <label>Customer Id</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_expire__c</fullName>
        <label>Days to expire</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>15 DAY</fullName>
                </value>
                <value>
                    <fullName>30 DAY</fullName>
                </value>
                <value>
                    <fullName>NONE</fullName>
                </value>
                <value>
                    <fullName>Today</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiration_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Expiration Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>1 year after available date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FN_Allocation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>FN Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FN_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>FN Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FN__c</fullName>
        <label>OLD FN %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FY_Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>FY Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fund_Id__c</fullName>
        <label>Fund Name</label>
        <referenceTo>Fund__c</referenceTo>
        <relationshipLabel>Co-Op Allocations</relationshipLabel>
        <relationshipName>Co_Op_Allocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>ION_Allocation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ION Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ION_NUAGE_Allocation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ION (NUAGE) Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ION_NUAGE_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ION (NUAGE) Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ION_NUAGE__c</fullName>
        <label>OLD ION (NUAGE) %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ION_OPTICS_Allocation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ION-OPTICS Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ION_OPTICS__c</fullName>
        <label>OLD ION-OPTICS %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ION_Optics_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ION-Optics Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ION_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Req#3513</description>
        <label>ION Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ION_Routing_Allocation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ION-Routing Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ION_Routing_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ION-Routing Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ION_Routing__c</fullName>
        <label>OLD ION-Routing %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ION__c</fullName>
        <label>OLD ION %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MN_Allocation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MN Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MN_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MN Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MN__c</fullName>
        <label>OLD MN %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>TEXT(Partner_Name__r.Market__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRM_18_Digit_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRM_A_A_VITAL_Transfers_In__c</fullName>
        <defaultValue>0</defaultValue>
        <label>A&amp;A (VITAL) Transfers In</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRM_A_A_VITAL_Transfers_Out__c</fullName>
        <defaultValue>0</defaultValue>
        <label>A&amp;A (VITAL) Transfers Out</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRM_A_A_VITAL__c</fullName>
        <formula>A_A_VITAL_Allocation__c / PRM_Sum_of_BG_Allocations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A&amp;A (VITAL) %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PRM_Co_Op_Eligible__c</fullName>
        <label>Co-op Eligible %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PRM_Co_op_Allocation_Amount__c</fullName>
        <formula>PRM_Co_op_Eligible_Revenue__c * PRM_Co_Op_Eligible__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Co-op Allocation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRM_Co_op_Eligible_Revenue__c</fullName>
        <formula>FN_Revenue__c + A_A_VITAL_Revenue__c + ION_Revenue__c + ION_NUAGE_Revenue__c + ION_Optics_Revenue__c + ION_Routing_Revenue__c + MN_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Co-op Eligible Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRM_FN_Transfers_In__c</fullName>
        <defaultValue>0</defaultValue>
        <label>FN Transfers In</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRM_FN_Transfers_Out__c</fullName>
        <defaultValue>0</defaultValue>
        <label>FN Transfers Out</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRM_FN__c</fullName>
        <formula>FN_Allocation__c / PRM_Sum_of_BG_Allocations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FN %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PRM_ION_NUAGE_Transfers_In__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ION (NUAGE) Transfers In</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRM_ION_NUAGE_Transfers_Out__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ION (NUAGE) Transfers Out</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRM_ION_NUAGE__c</fullName>
        <formula>ION_NUAGE_Allocation__c / PRM_Sum_of_BG_Allocations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ION (NUAGE) %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PRM_ION_OPTICS_Transfers_In__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ION-OPTICS Transfers In</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRM_ION_OPTICS_Transfers_Out__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ION-OPTICS Transfers Out</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRM_ION_OPTICS__c</fullName>
        <formula>ION_OPTICS_Allocation__c / PRM_Sum_of_BG_Allocations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ION-OPTICS %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PRM_ION_Routing_Transfers_In__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ION-Routing Transfers In</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRM_ION_Routing_Transfers_Out__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ION-Routing Transfers Out</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRM_ION_Routing__c</fullName>
        <formula>ION_Routing_Allocation__c / PRM_Sum_of_BG_Allocations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ION-Routing %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PRM_ION_Transfers_In__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ION Transfers In</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRM_ION_Transfers_Out__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ION Transfers Out</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRM_ION__c</fullName>
        <formula>ION_Allocation__c / PRM_Sum_of_BG_Allocations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ION %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PRM_Legal_Entity_Number__c</fullName>
        <formula>Fund_Id__r.PRM_Legal_Entity_Number__c</formula>
        <label>Legal Entity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRM_MN_Transfers_In__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MN Transfers In</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRM_MN_Transfers_Out__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MN Transfers Out</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PRM_MN__c</fullName>
        <formula>MN_Allocation__c / PRM_Sum_of_BG_Allocations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MN %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PRM_Sum_of_BG_Allocations__c</fullName>
        <formula>A_A_VITAL_Allocation__c + FN_Allocation__c + ION_NUAGE_Allocation__c + ION_Allocation__c +
	ION_OPTICS_Allocation__c + ION_Routing_Allocation__c + MN_Allocation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sum of BG Allocations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Accruals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pipeline_Claims__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Submitted, Incomplete and Escalated claims.</inlineHelpText>
        <label>Pipeline Claims</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reimbursed_Amount__c</fullName>
        <label>Reimbursed Amount</label>
        <summarizedField>Accrual_junction__c.Amount_deducted_from_accrual__c</summarizedField>
        <summaryFilterItems>
            <field>Accrual_junction__c.Status__c</field>
            <operation>equals</operation>
            <value>Reimbursed</value>
        </summaryFilterItems>
        <summaryForeignKey>Accrual_junction__c.Accrual__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Partially active</fullName>
                </value>
                <value>
                    <fullName>Reporting pending</fullName>
                    <default>true</default>
                    <label>Reporting pending</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transfers_in_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Transfers in Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transfers_out_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Transfers out Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Co-op Allocation</label>
    <listViews>
        <fullName>Active_Accruals</fullName>
        <columns>NAME</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Allocation_Period_Balance__c</columns>
        <columns>Co_Op_Allocation_Amount__c</columns>
        <columns>Available_Date__c</columns>
        <columns>Partner_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active Allocations</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Partner_Name__c</columns>
        <columns>Co_Op_Allocation_Period__c</columns>
        <columns>Available_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Revenue__c</columns>
        <columns>PRM_Co_op_Allocation_Amount__c</columns>
        <columns>Reimbursed_Amount__c</columns>
        <columns>Expiration_Amount__c</columns>
        <columns>Adjustment_Amount__c</columns>
        <columns>Allocation_Period_Balance__c</columns>
        <columns>PRM_18_Digit_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Co_Op_Allocation_Period__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Expired_Accruals</fullName>
        <columns>NAME</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Allocation_Period_Balance__c</columns>
        <columns>Co_Op_Allocation_Amount__c</columns>
        <columns>Expiration_Amount__c</columns>
        <columns>Partner_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Expired</value>
        </filters>
        <label>Expired Allocations</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Co-op Allocation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Co-op Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>